# scriptorium-felt

./: .clang-format  .gitignore  CMakeLists.txt  README.md
core/: CMakeLists.txt
core/ipc/: CMakeLists.txt
core/ipc/include/modian/common/core/ipc/: iasync_ipc_server.h  isync_ipc_client.h  isync_ipc_server.h
core/ipc/include/scriptorium/felt/core/ipc/: iasync_ipc_server.h  isync_ipc_client.h  isync_ipc_server.h
core/logger/: CMakeLists.txt
core/logger/include/modian/common/core/logger/: base_logger.h  console_logger.h  logger_service.h
core/logger/include/scriptorium/felt/core/logger/: base_logger.h  console_logger.h  logger_service.h
core/logger/src/: console_logger.cpp  logger_service.cpp
core/observer/: CMakeLists.txt
core/observer/include/modian/common/core/observer/: icandidate_observer.h
core/observer/include/scriptorium/felt/core/observer/: icandidate_observer.h
core/protocol/: CMakeLists.txt
core/protocol/include/modian/common/core/protocol/v1/input/: instruction.h  key_commands.h  key_event.h
core/protocol/include/modian/common/core/protocol/v1/ui/: render_state.h  user_action.h
core/protocol/include/scriptorium/felt/core/protocol/v1/input/: instruction.h  key_event.h
core/protocol/include/scriptorium/felt/core/protocol/v1/ui/: render_state.h  user_action.h
core/protocol/src/v1/input/win/: key_event.cpp
infra/: CMakeLists.txt
infra/ipc/: CMakeLists.txt
infra/ipc/include/modian/common/infra/ipc/: ipc_client_factory.h  ipc_server_factory.h
infra/ipc/include/modian/common/infra/ipc/win/: async_named_pipe_server.h  sync_named_pipe_client.h  sync_named_pipe_server.h
infra/ipc/include/scriptorium/felt/infra/ipc/: ipc_client_factory.h  ipc_server_factory.h
infra/ipc/include/scriptorium/felt/infra/ipc/win/: async_named_pipe_server.h  sync_named_pipe_client.h  sync_named_pipe_server.h
infra/ipc/src/win/: async_named_pipe_server.cpp  ipc_client_factory.cpp  ipc_server_factory.cpp  sync_named_pipe_client.cpp  sync_named_pipe_server.cpp
infra/logger/: CMakeLists.txt
infra/logger/include/modian/common/infra/logger/: spdlog_logger.h
infra/logger/include/scriptorium/felt/infra/logger/: spdlog_logger.h
infra/logger/src/: spdlog_logger.cpp
infra/utils/: CMakeLists.txt
infra/utils/include/modian/common/infra/utils/: string_utils.h
infra/utils/include/scriptorium/felt/infra/utils/: string_utils.h
infra/utils/src/: string_utils.cpp
service/protocol/: CMakeLists.txt
service/protocol/include/modian/common/service/protocol/: input_protocol_service.h  ui_protocol_service.h
service/protocol/include/scriptorium/felt/service/protocol/: input_protocol_service.h  ui_protocol_service.h
service/protocol/src/: input_protocol_service.cpp  ui_protocol_service.cpp
src/lib/: CMakeLists.txt
tests/: CMakeLists.txt
tests/core/protocol/: instruction_test.cpp  key_event_test.cpp
tests/infra/ipc/: sync_named_pipe_client_test.cpp
tests/infra/utils/: string_utils_test.cpp
tests/service/protocol/: input_protocol_service_test.cpp  ui_protocol_service_test.cpp
